[package]
name = "greyscript_compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.2.0"
clap = { version = "4.3.19", features = ["derive"] }
filepath = "0.1.2"
glob = "0.3.1"
log = "0.4.19"
pretty_env_logger = "0.5.0"

[lib]
name = "parser"
path = "src/parser.rs"
